# testops-tools

./: .gitignore  README.md  last_tag.txt
.github/: dependabot.yml
.ipynb_checkpoints/: android_browser_perf_analysis-checkpoint.ipynb  untitled-checkpoint.md
android-l10n-integrity/: requirements.txt
android-performance/: 2G_Page_Load_Times.csv  3G_Page_Load_Times.csv  4G_Page_Load_Times.csv  5G_Page_Load_Times.csv  README.md  add_perf_diff.py  chrome.py  firefox.py  network_throttle  package-lock.json  package.json  page_load_times.csv  requirements.txt  upload_test_results.py
android_refactor_example/: readme-pom-android.md
backup-tools/: README.md  backup_testrail.py  output-test-counts.sh  requirements.txt  slack-fail.json  slack-pass.json  slack-success.json  slack.json  test-counts.json  testrail-import.cfg  testrail.py  testrail_conn.py
changelog-analysis/: Jenkinsfile.create-smart-test-runs  README.md  get_cases.py  get_change_log.py  get_release_tags.py  rules.yml  run_release_selection.py
claude-commands/: infra.md
ftl-devices/: devices.md
gcp-billing-notify/: gcp_yearly.json  notify_slack.py
github-new-issues/: README.md  check_new_issues.py
ios-appstore-ratings/: README.md  check_ratings.py  slack-error-template.json  slack-rate-down-template.json
ios-insights/: convertHTML2NDJSON.py  daily_test_stats.sql  flacky_test_details.sql  flaky_test_details.sql  schema.json  schema_flaky.json
llm-cloud-run/: .dockerignore  Dockerfile  README_DEPLOY.md  llm-cloud-run.yml.txt  main.py  notes.json  requirements.txt  run.py  seed_notes.py  serve.py  slack-product-health-pulse.json  slack.py
play-developer-reporting/: CLAUDE.MD  Dockerfile  pyproject.toml
play-developer-reporting/src/: fetch_metrics.py  queries.toml  queries.yaml  run_queries.py
play-ratings/: README.md  check_ratings.py  post_slack.py  rating-state-org.mozilla.fenix.json  rating-state-org.mozilla.firefox.json
retry-flaky-tests/: README
retry-ios-tests/: README  retry-ios-tests.py
sentry-report/: sentry_api.py
slack-reminders/: README  firefox-ios-security-monitor.py  ios-security-rotation.json  ios_sec_triage.json  security_monitor_state.txt
telemetry-expiry/: check_metrics.py
test-recommender/: .gitignore  README.md  budget_calculator.py  candidate_scorer.py  git_pr_extractor.py  metrics_baseline.md  recommend.py  requirements.txt  section_to_module_mapping.yaml
testrail/: CONFIGURATION.md  Jenkinsfile.check-bitrise-ios-release-tags  Jenkinsfile.create-milestone  Jenkinsfile.test-git-push  README.md  TESTRAIL_URL_SCANNER.md  check_bitrise_for_release.py  jenkins-trigger.sh  last_tag.txt  latest_tags.json  requirements.txt  slack_notifier.py  testrail_api.py  testrail_main.py  testrail_main_ios.py  testrail_scan_missing_urls.py  testrail_utils.py
xchtmlreport-extract/: README  (+2 more)
xchtmlreport-extract-failed-tests/: README  README.md  requirements  xchtmlreport_extract_failed_tests.py
(+1093 files in other folders)
