[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "play-vitals-metrics"
version = "0.5.0"
description = "Query Google Play Developer Reporting API for Android vitals metrics"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"
authors = [{ name = "Mozilla Mobile Test Engineering" }]

dependencies = [
    "google-auth>=2.48.0",
    "google-api-python-client>=2.190.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.10",
    "mypy>=1.10",
]

[project.scripts]
fetch-metrics = "fetch_metrics:main"

[tool.setuptools]
py-modules = ["fetch_metrics"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.flake8]
extend-ignore = ["W503"]